config/networkpolicy/ingress-to-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-operator-metrics
spec:
  podSelector:
    matchLabels:
      app: numaresources-operator
  ingress:
    - ports:
        - protocol: TCP
          port: https
  policyTypes:
    - Ingress
