config/networkpolicy/webhook-server.yaml
# Allow access to the webhook server.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhook-traffic
spec:
  ingress:
    - ports:
        - port: 9443
          protocol: TCP
  podSelector:
    matchLabels:
      app: numaresources-operator
  policyTypes:
    - Ingress
